--- a/app/src/main/res/layout/calendar_component.xml
+++ b/app/src/main/res/layout/calendar_component.xml
@@ -53,7 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/lightLightGrey">
 
         <TextView
             android:layout_width="0dp"
