--- a/app/src/main/res/layout/activity_mood.xml
+++ b/app/src/main/res/layout/activity_mood.xml
@@ -7,27 +7,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5">
+        android:layout_weight="6">
         <TextView
             android:id="@+id/date_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="@string/date_placeholder_text"
             android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="@string/date_placeholder_text"/>
+            android:textSize="20sp"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5">
+        android:layout_weight="4">
         <TextView
             android:id="@+id/mood_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="@string/rating_prompt"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <com.hsalf.smilerating.SmileRating
             android:id="@+id/mood_rating"
             android:layout_width="match_parent"
@@ -38,21 +38,42 @@
 
         <TextView
             android:id="@+id/writing_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="@string/writing_prompt"
             android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/mood_rating"
             android:layout_marginBottom="10dp"/>
         <ImageButton
             android:id="@+id/writing_button"
+            android:src="@drawable/ic_create_black_24dp"
+            android:contentDescription="@string/writing_button_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_create_black_24dp"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/writing_text"
-            android:contentDescription="@string/writing_button_description"/>
+            style="@style/Widget.AppCompat.Button.Borderless"/>
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        style="?android:attr/buttonBarStyle">
+        <Button
+            android:id="@+id/cancel_button"
+            android:text="@string/cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"/>
+        <Button
+            android:id="@+id/save_button"
+            android:text="@string/save"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"/>
+    </LinearLayout>
 
 </LinearLayout>
