Insert new "review" layout when a selected date has already been edited by the user (includes renaming other layouts to avoid confusion)

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -52,9 +52,14 @@
     </RelativeLayout>
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/calendar_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+    </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/review_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     </FrameLayout>
 </LinearLayout>
