--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -57,9 +57,11 @@
         android:layout_height="wrap_content">
     </FrameLayout>
 
-    <FrameLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/review_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight="1">
+    </android.support.v7.widget.CardView>
 </LinearLayout>
