--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -10,19 +10,24 @@
         android:id="@+id/saved_date_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30sp"
         android:text="@string/date_placeholder_text"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="italic"/>
 
     <TextView
         android:id="@+id/saved_mood_rating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15sp"
         android:text="@string/mood_placeholder_text"
-        android:textAlignment="center"/>
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/saved_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/description_placeholder_text"/>
+        android:text="@string/description_placeholder_text"
+        android:textSize="16sp"/>
 </LinearLayout>
