--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -10,19 +10,19 @@
         android:id="@+id/saved_date_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30sp"
+        android:layout_marginBottom="10sp"
         android:text="@string/date_placeholder_text"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="italic"/>
 
-    <TextView
-        android:id="@+id/saved_mood_rating"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/saved_mood_icon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15sp"
-        android:text="@string/mood_placeholder_text"
-        android:textSize="16sp"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/ic_mood_okay_56dp"
+        android:contentDescription="@string/mood_icon_description"/>
 
     <TextView
         android:id="@+id/saved_description"
