Create dialog with color picker widget in settings layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="greyOut">#C7C7C7</color>
     <color name="lightLightGrey">#F6F6F6</color>
     <color name="lightBlue">#ADD8E6</color>
+    <color name="darkGrey">#1C2F2F</color>
 
     <color name="great">#FF3232</color>
     <color name="good">#FF9932</color>
