--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -36,7 +36,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/edit_color_button_description"
-            android:src="@drawable/ic_create_black_24dp" />
+            android:src="@drawable/ic_create_black_24dp"
+            android:onClick="showColorPickerDialog" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -61,7 +62,8 @@
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/edit_color_button_description"
-            android:src="@drawable/ic_create_black_24dp" />
+            android:src="@drawable/ic_create_black_24dp"
+            android:onClick="showColorPickerDialog" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -86,7 +88,8 @@
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/edit_color_button_description"
-            android:src="@drawable/ic_create_black_24dp" />
+            android:src="@drawable/ic_create_black_24dp"
+            android:onClick="showColorPickerDialog" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -111,7 +114,8 @@
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/edit_color_button_description"
-            android:src="@drawable/ic_create_black_24dp" />
+            android:src="@drawable/ic_create_black_24dp"
+            android:onClick="showColorPickerDialog" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -136,6 +140,7 @@
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/edit_color_button_description"
-            android:src="@drawable/ic_create_black_24dp" />
+            android:src="@drawable/ic_create_black_24dp"
+            android:onClick="showColorPickerDialog"/>
     </RelativeLayout>
 </LinearLayout>
